--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.16",
-    "highcharts": "^7.1.2",
+    "bootstrap-vue": "^2.0.2",
+    "highcharts": "^7.2.0",
     "highcharts-vue": "^1.3.5",
-    "swiper": "^5.0.3",
-    "vue": "^2.6.6"
+    "moment": "^2.24.0",
+    "swiper": "^5.0.4",
+    "vue": "^2.6.6",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
